# vision-based_navigation

./: .gitignore  add_python_path.sh  add_python_path_for_simple.sh
dnn_models/abstrelposnet/: generate_dataset_from_rosbag.py  loss_func.py  (+3 more)
docker/: Dockerfile  build.sh  run.sh
relative_navigator/: CMakeLists.txt  package.xml
relative_navigator/.cache/clangd/index/: local_goal_generator.cpp.1D9E48ABAF0F8F2B.idx  local_goal_generator.hpp.E84103877EA03881.idx  local_goal_generator_node.cpp.7577755A2684EAD8.idx  local_path_planner.cpp.EDA0A3C7949B280F.idx  local_path_planner.hpp.B723A716A162B647.idx  local_path_planner_node.cpp.DFA23E36C2B00605.idx  reference_trajectory_handler.cpp.96F5E52640E577F5.idx  reference_trajectory_handler.hpp.C7FC92737134BCFC.idx  reference_trajectory_handler_node.cpp.B51C7104299DCD33.idx
relative_navigator/config/param/: all_system_base.yaml  local_goal_generator.yaml  local_path_planner.yaml  local_path_planner_whill.yaml  reference_trajectory_handler.yaml  reference_trajectory_handler_whill.yaml  relative_pose_label_estimator.yaml  relative_pose_label_estimator_whill.yaml
relative_navigator/config/rviz/: actual_path.rviz  base.rviz  map.rviz  map_for_test.rviz  map_hoge.rviz  only_convert.rviz  relative_navigator.rviz  relative_navigator_base_link.rviz  relative_navigator_map.rviz  relative_navigator_map_whill.rviz
relative_navigator/include/local_goal_generator/: local_goal_generator.hpp
relative_navigator/include/local_path_planner/: [  local_path_planner.hpp
relative_navigator/include/reference_trajectory_handler/: reference_trajectory_handler.h  reference_trajectory_handler.hpp
relative_navigator/launch/: dev.launch  only_convert.launch  only_rviz.launch  reference_trajectory_handler_node_only.launch  relative_navigator.launch  relative_navigator_check_whill.launch  relative_navigator_valid.launch  relative_navigator_whill.launch  topological_map_test.launch  topological_map_visualizer.launch  topological_mapper.launch
relative_navigator/localize_error/actual_c1_localize_error/: 2024-01-24-1519_c1_for_check_trial1.csv  2024-01-24-1533_c1_for_check_trial2.csv  2024-01-24-1545_c1_for_check_trial3.csv  2024-01-24-1557_c1_for_check_trial4.csv  2024-01-24-1615_c1_for_check_trial5.csv
relative_navigator/rosbag_tools/: CMakeLists.txt
relative_navigator/rosbag_tools/config/rviz/: rosbag_check.rviz
relative_navigator/rosbag_tools/launch/: rosbag_check.launch
relative_navigator/scripts/: abstract_relative_pose_estimator.py  abstract_relative_pose_estimator_node.py  graph_localizer_node.py  graph_path_planner_node.py  nx_practice.py  rel_pose_estimator_node.py  rel_pose_label_estimator.py  rel_pose_label_estimator_node.py  topological_map_test_node.py  topological_map_visualizer_node.py  topological_mapper_node.py
relative_navigator/scripts/modules/: [  abstract_relative_pose_estimator.py  graph_localizer.py  graph_path_planner.py  rel_pose_estimator.py  rel_pose_label_estimator.py  topological_map_io.py  topological_map_test.py  topological_map_visualizer.py  topological_mapper.py  utils.py
relative_navigator/src/: local_goal_generator.cpp  local_goal_generator_node.cpp  local_path_planner.cpp  local_path_planner_node.cpp  reference_trajectory_handler.cpp  reference_trajectory_handler_node.cpp
relative_navigator_msgs/: CMakeLists.txt  package.xml
relative_navigator_msgs/msg/: AbstRelPose.msg  ImageWithPose.msg  ImageWithPoseArray.msg  NodeInfo.msg  NodeInfoArray.msg  RelPoseLabel.msg  SimpleRelPoseLabel.msg
rosbag_tools/: package.xml
simple_relative_navigator/: CMakeLists.txt  package.xml
simple_relative_navigator/.cache/clangd/index/: local_goal_generator.cpp.961E00A75DD1C518.idx  local_goal_generator.hpp.50F5C9AE54576502.idx  local_goal_generator_node.cpp.741850248272FF7F.idx
simple_relative_navigator/config/param/: local_path_planner.yaml  reference_trajectory_handler.yaml
simple_relative_navigator/config/rviz/: relative_navigator_base_link.rviz  relative_navigator_map.rviz
simple_relative_navigator/include/local_goal_generator/: local_goal_generator.hpp
simple_relative_navigator/launch/: relative_navigator.launch  rviz.launch
simple_relative_navigator/scripts/: relative_pose_label_estimator.py  relative_pose_label_estimator_node.py
simple_relative_navigator/src/: local_goal_generator.cpp  local_goal_generator_node.cpp
(+43 files in other folders)
