<?xml version="1.0"?>
<package format="2">
  <name>relative_navigator</name>
  <version>0.0.0</version>
  <description>The relative_navigator package</description>

  <maintainer email="amsl@todo.todo">amsl</maintainer>


  <license>TODO</license>

  <build_depend>relative_navigator_msgs</build_depend>
  <exec_depend>relative_navigator_msgs</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
