<?xml version="1.0"?>
<package format="2">
  <name>simple_relative_navigator</name>
  <version>0.0.0</version>
  <description>The simple_relative_navigator package</description>

  <maintainer email="amsl@todo.todo">amsl</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>relative_navigator_msgs</build_depend>
  <exec_depend>relative_navigator_msgs</exec_depend>

  <export>

  </export>
</package>
